# Price-Tacking

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/app/: db.py  main.py
