[tool.poetry]
name = "price-tacking"
version = "0.1.0"
description = ""
authors = ["Jake <iloveheat1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.117.1"}
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
psycopg2 = "^2.9.10"
pydantic = "^2.11.9"
alembic = "^1.16.5"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
